Closed
Bug 463490
Opened 16 years ago
Closed 16 years ago
TM: Fatal assert on JS raytracer testcase: Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at ../jstracer.cpp:2797
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: bzbarsky, Assigned: dvander)
References
()
Details
(Keywords: verified1.9.1)
Attachments
(1 file)
4.55 KB,
patch
|
gal
:
review+
|
Details | Diff | Splinter Review |
The JS shell testcase is the one from bug 463487. When running that JS file in a debug shell with -j but without -b, I get:
Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at ../jstracer.cpp:2797
![]() |
Reporter | |
Updated•16 years ago
|
Assignee: general → danderson
![]() |
Reporter | |
Updated•16 years ago
|
Severity: normal → critical
Flags: blocking1.9.1?
![]() |
Assignee | |
Comment 1•16 years ago
|
||
Explanation of the bug: Say a tree with typemap [int, int] is stable, and another tree with typemap [int, double] was created and closed. If we entered the initial tree and extended an [int, double] branch, it wouldn't be connected to the second tree.
This was simply another hole in the heuristics. The patch now searches for stable peers in all instability cases before falling back on leaving unclosed, undemotable exits.
Attachment #346805 -
Flags: review?(gal)
![]() |
Assignee | |
Comment 2•16 years ago
|
||
Comment on attachment 346805 [details] [diff] [review]
proposed fix
>- /* If we got here, there was a successful match. */
>+ /*
>+ * There was a successful match. We don't care about restoring the saved staging, but
>+ * we do need to clear the original undemote list.
>+ */
Whoops, ignore this comment, it's stale.
![]() |
Reporter | |
Updated•16 years ago
|
Summary: Fatal assert on JS raytracer testcase: Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at ../jstracer.cpp:2797 → TM: Fatal assert on JS raytracer testcase: Assertion failure: !ti->stackTypeMap.matches(ti_other->stackTypeMap), at ../jstracer.cpp:2797
Comment 3•16 years ago
|
||
Does the patch give a speedup as well as assertion relief?
/be
![]() |
Reporter | |
Comment 4•16 years ago
|
||
Bug 463487 covers the perf issues on this testcase. Offhand, the patch doesn't seem to help on that.
Comment 5•16 years ago
|
||
Comment on attachment 346805 [details] [diff] [review]
proposed fix
Good test case.
Attachment #346805 -
Flags: review?(gal) → review+
![]() |
Assignee | |
Comment 6•16 years ago
|
||
Pushed fix as changeset: http://hg.mozilla.org/tracemonkey/rev/ef137cf05203
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 7•16 years ago
|
||
test already in js1_8_1/trace/trace-test.js
Flags: in-testsuite+
Flags: in-litmus-
Updated•16 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
Keywords: fixed1.9.1
Comment 8•16 years ago
|
||
v 1.9.1, 1.9.2
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
You need to log in
before you can comment on or make changes to this bug.
Description
•