Fixed multitrees assert when building failed speculated branches (bug 463490, r=gal).