js/src/jstracer.cpp
@@ -1987,10 +1987,12 @@ TraceRecorder::deduceTypeStability(Fragment* root_peer, Fragment** stable_peer, 
 
     CLEAR_UNDEMOTE_SLOTLIST(demotes);
 
-    /* Rather than calculate all of this stuff twice, it gets cached locally.  The "stage" buffers 
+    /*
+     * Rather than calculate all of this stuff twice, it gets cached locally.  The "stage" buffers 
      * are for calls to set() that will change the exit types.
      */
     bool success;
+    bool unstable_from_undemotes;
     unsigned stage_count;
     jsval** stage_vals = (jsval**)alloca(sizeof(jsval*) * (ngslots + treeInfo->stackTypeMap.length()));
     LIns** stage_ins = (LIns**)alloca(sizeof(LIns*) * (ngslots + treeInfo->stackTypeMap.length()));
@@ -1998,6 +2000,7 @@ TraceRecorder::deduceTypeStability(Fragment* root_peer, Fragment** stable_peer, 
     /* First run through and see if we can close ourselves - best case! */
     stage_count = 0;
     success = false;
+    unstable_from_undemotes = false;
 
     debug_only_v(printf("Checking type stability against self=%p\n", fragment);)
 
@@ -2025,7 +2028,14 @@ TraceRecorder::deduceTypeStability(Fragment* root_peer, Fragment** stable_peer, 
         ++m;
     );
 
-    success = true;
+    /*
+     * If there's an exit that's unstable because of undemotable slots, we want to search for 
+     * peers just in case we can make a connection.
+     */
+    if (NUM_UNDEMOTE_SLOTS(demotes))
+        unstable_from_undemotes = true;
+    else
+        success = true;
 
 checktype_fail_1:
     /* If we got a success and we don't need to recompile, we should just close here. */
@@ -2067,13 +2077,41 @@ checktype_fail_1:
 
 checktype_fail_2:
         if (success) {
-            /* If we got here, there was a successful match. */
+            /*
+             * There was a successful match.  We don't care about restoring the saved staging, but 
+             * we do need to clear the original undemote list.
+             */
             for (unsigned i = 0; i < stage_count; i++)
                 set(stage_vals[i], stage_ins[i]);
             if (stable_peer)
                 *stable_peer = f;
             return false;
         }
+    }
+
+    JS_ASSERT(NUM_UNDEMOTE_SLOTS(demotes) == 0);
+
+    /*
+     * If this is a loop trace and it would be stable with demotions, build an undemote list 
+     * and return true.  Our caller should sniff this and trash the tree, recording a new one 
+     * that will assumedly stabilize.
+     */
+    if (unstable_from_undemotes && fragment->kind == LoopTrace) {
+        typemap = m = treeInfo->stackTypeMap.data();
+        FORALL_SLOTS_IN_PENDING_FRAMES(cx, 0,
+            if (*m == JSVAL_INT) {
+                JS_ASSERT(isNumber(*vp));
+                if (!isPromoteInt(get(vp)))
+                    ADD_UNDEMOTE_SLOT(demotes, unsigned(m - typemap));
+            } else if (*m == JSVAL_DOUBLE) {
+                JS_ASSERT(isNumber(*vp));
+                ADD_UNDEMOTE_SLOT(demotes, unsigned(m - typemap));
+            } else {
+                JS_ASSERT(*m == JSVAL_TAG(*vp));
+            }
+            m++;
+        );
+        return true;
     }
 
     return false;
@@ -2168,18 +2206,9 @@ TraceRecorder::closeLoop(Fragmento* fragmento, bool& demote, unsigned *demotes)
     }
 
     if (stable && NUM_UNDEMOTE_SLOTS(demotes)) {
-        /* If this is a loop trace, we can demote and recompile */
-        if (fragment->kind == LoopTrace) {
-            demote = true;
-            /* Make sure we use doubles in future trees for all other double slots. */
-            uint8* m = treeInfo->stackTypeMap.data();
-            for (unsigned i = 0; i < treeInfo->stackTypeMap.length(); i++) {
-                if (m[i] == JSVAL_DOUBLE)
-                    ADD_UNDEMOTE_SLOT(demotes, i);
-            }
-            return false;
-        }
-        stable = false;
+        JS_ASSERT(fragment->kind == LoopTrace);
+        demote = true;
+        return false;
     }
 
     if (!stable) {
